# infovoz

./: .dockerignore  .env.example  .gitignore  ANALISIS.md  Dockerfile  INSTALACION.md  Instalación  MANUAL_USUARIO.md  README.md  README.txt  admin_users.py  cambios.txt  chatapi.py  dependencias.sh  dependencias_linux.sh  docker-compose.yml  docker-entrypoint.sh  env_editor.py  main.py  main2.py  prompt_anythingllm.txt  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.py  users.example.json
