[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asistente-voz"
version = "1.0.0"
authors = [
    {name = "Tu Nombre", email = "tu@email.com"},
]
description = "Asistente de voz con múltiples APIs y TTS de calidad"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "vosk>=0.3.45",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "flet>=0.17.0",
    "edge-tts>=6.1.9",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
premium = [
    "google-cloud-texttospeech>=2.14.0",
    "openai>=1.0.0",
]
web = [
    "gunicorn>=20.0.0",
    "uvicorn>=0.20.0",
]

[project.urls]
"Homepage" = "https://github.com/tuusuario/asistente-voz"
"Bug Tracker" = "https://github.com/tuusuario/asistente-voz/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''